k8s/overlays/fstu/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ojs-fstu
  labels:
    name: ojs-fstu
